Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41812

QSettings ASSERT and crash in debug mode when passing empty key

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.4.0
    • 5.3.2
    • Core: I/O
    • None
    • Windows 8.1
      Qt5.3.2 MSVC2013 OpenGL (64bits)
    • 0368b24a7f53c945b582097cc8ad22a053856d22 (5.4, 17.10.2014, 5.4)

      Hi,

      Reading value with a default value will ASSERT in debug mode if the key is empty.

      The code (from the doc !!):

      QSettings settings;
      settings.value("").toInt();
      

      will assert and exit the program on last line querying value for zebra
      (same for setValue()/value(), assert is in function actualKey(), see stack trace).

        1. qtbug41812_stack.txt
          3 kB
          Friedemann Kleint
        2. qtbug41812.zip
          0.7 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            ness522 Stéphane Fabry
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes