QSettings: Prevent assert when passing empty keys.

[ChangeLog][Important behavior changes][QSettings]
QSettings::value() now returns an invalid QVariant
when passing an empty key. The code path ran into
an assert, which was only noticeable in debug
builds.

Task-number: QTBUG-41812
Change-Id: I5cc32be3aa267a132e9d6639ecd6cb0bbafc15b0
Reviewed-by: Stéphane Fabry, Cutesoft <stephane.fabry@gmail.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 0368b24a7f53c945b582097cc8ad22a053856d22 https://github.com/qt/qtbase/commit/0368b24a7f53c945b582097cc8ad22a053856d22